@startuml

'Clase que encapsula la logica de movimientos.
abstract class Movimiento{
    - cantidad: Integer
    + sumarMovimiento( movimientos )
    + {abstract} esPosible(): boolean
}

class MovimientoValido{
    + esPosible(): boolean
}
class MovimientoInvalido{
    +  esPosible(): boolean
}

MovimientoValido --|> Movimiento
MovimientoInvalido --|> Movimiento

@enduml